--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,25 @@
   box-sizing: border-box;
   border: 1px solid #ffff80;
 }
+footer {
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.footer-link {
+  font-size: x-small;
+  font-weight: 400 ;
+  color: #666666;
+  text-decoration: none;
+  padding: 1em;
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
+}
