--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   text-decoration: none;
   /* border: 1px solid black; */
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
 }
 body {
   width: 100%;
@@ -75,7 +76,7 @@ main {
 article {
   max-width: 600px;
   width: 600px;
-  margin-left: calc((100% - 600px) / 2);
+  /* margin-left: calc((100% - 600px) / 2); */
   margin: 20px auto 0 auto;
 }
 
@@ -84,9 +85,11 @@ article > div {
   display: flex;
   justify-content: space-between;
 }
-
+.icons > * {
+  margin-left: 20px;
+}
 article > p {
-  margin-bottom: 10%;
+  margin-bottom: 15px;
   font-size: 1.25rem;
   line-height: 1.875rem;
   font-family: georgia, 'times new roman', times, serif;
@@ -133,6 +136,158 @@ main aside p {
   background: lightgrey;
 }
 
+.theory-of-inflation {
+  font-family: nyt-cheltenham, georgia, times new roman, times, serif;
+  color: #333;
+  padding: 20px;
+  width: 1000px;
+  margin: 0px auto;
+}
+
+.all-theories {
+  margin-top: 50px;
+  background-image: url('https://static01.nyt.com/newsgraphics/2014/03/18/theory-of-inflation/1ebaa1b972edda0f407fbaa0e010f6b50fb6792e/inflation-720.png');
+  background-color: #cccccc;
+  height: 700px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  font-size: 14px;
+  line-height: 17px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-column-gap: 30px;
+  padding-top: 190px;
+  grid-row-gap: 280px;
+}
+
+.theory {
+  min-width: 228px;
+}
+.by-larry {
+  padding-top: 80px;
+}
+.by-larry:before {
+  display: block;
+  content: '';
+  height: 3px;
+  margin: 15px 0;
+  width: 70px;
+  background: lightgrey;
+}
+
+.all-theories p {
+  font-weight: 300;
+}
+
+article iframe {
+  margin: 20px auto;
+}
+
+article figure {
+  font-size: 0.9375rem;
+  line-height: 1.25rem;
+  color: #666;
+}
+
+article small {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  margin: 0px auto 1em;
+  color: rgb(102, 102, 102);
+}
+.article-footer {
+  display: flex;
+  justify-content: space-between;
+}
+.article-footer button {
+  cursor: pointer;
+  background-color: rgb(86, 123, 149);
+  border: 1px solid rgb(50, 104, 145);
+  border-radius: 3px;
+  color: white;
+  width: 330px;
+  max-width: 600px;
+  padding: 5px 0;
+  font-weight: 650;
+  line-height: 1.5rem;
+}
+
+.more-article {
+  display: flex;
+  justify-content: center;
+}
+.content {
+  width: 57%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  /* width: 852px; */
+  border-top: 1px solid #333;
+}
+.content-header {
+  grid-column: 1/-1;
+  justify-self: start;
+  padding: 17px 0;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1.375rem;
+  width: 100%;
+}
+.top-line:before {
+  display: block;
+  content: '';
+  height: 2px;
+  width: 100%;
+  background: #333;
+  margin-bottom: 15px;
+}
+.rec-article {
+  max-width: 272px;
+  min-width: 210px;
+}
+.rec-article figure {
+  padding-bottom: 4px;
+  font-size: 0.625rem;
+  text-align: right;
+  color: rgb(153, 153, 153);
+  line-height: 1.23em;
+  margin-top: 3px;
+}
+.rec-article figure img {
+  width: 100%;
+}
+.rec-article h3 {
+  font-size: 1.125rem;
+  line-height: 22px;
+}
+.rec-article h3:hover {
+  cursor: pointer;
+  color: rgb(102, 102, 102);
+}
+
+.rec-article small {
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.3px;
+  color: rgb(153, 153, 153);
+}
+.footer-aside-bar {
+  width: 20%;
+  margin-left: 20px;
+  border-top: 1px solid #333;
+}
+
+.footer-aside-bar h3 {
+  border-bottom: 1px solid rgb(226, 226, 226);
+  padding: 15px 0px;
+  color: rgb(18, 18, 18);
+  font-weight: 500;
+  font-size: 1.1875rem;
+  line-height: 1.4375rem;
+  font-family: nyt-cheltenham, georgia, 'times new roman', times, serif;
+}
 footer {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
